Fixed quick fix popup being too small

--- a/src/scss/Scrolling/_Animate.scss
+++ b/src/scss/Scrolling/_Animate.scss
@@ -3,7 +3,8 @@
 .monaco-list-row:not(
     .explorer-folders-view .monaco-list-row,
     .outline-pane .monaco-list-row,
-    .monaco-editor .overflowingContentWidgets .monaco-list-row
+    .monaco-editor .overflowingContentWidgets .monaco-list-row,
+    .action-widget .monaco-list-row
   ) {
   animation: scrollingAnimation var(--scrolling-duration);
 }
